Alterações básicas no texto e adição do Favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap" rel="stylesheet"> 
 
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.jpg">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NLW eSports</title>
@@ -15,7 +16,7 @@
 
         <header>
             <div>
-                <img src="https://github.com/IgorMolinaLS.png" alt="spider igo"/>
+                <img src="https://github.com/IgorMolinaLS.png" alt="Imagem de perfil"/>
             </div>
         </header>
 
@@ -31,7 +32,7 @@
                             <a
                             target="_blank" 
                             href="https://www.twitch.tv/directory/game/League%20of%20Legends">
-                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg" alt="Imagem do jogo LoL">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg" alt="Imagem do jogo League of Legends">
                             </a>
                         </li>
 
@@ -47,7 +48,7 @@
                             <a
                             target="_blank" 
                             href="https://www.twitch.tv/directory/game/VALORANT">
-                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-188x250.jpg" alt="Imagem do jogo Vava">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-188x250.jpg" alt="Imagem do jogo Valorant">
                             </a>
                         </li>
                     </ul>
@@ -72,7 +73,7 @@
                             <a
                             target="_blank" 
                             href="https://www.twitch.tv/yoda">
-                                <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/a1489408-be7a-42b8-b823-962d1e0f0a6a-profile_image-70x70.png" alt="Ícone do Yoda">
+                                <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/b2eb8a23-d6ad-45aa-bd8e-062133b64452-profile_image-70x70.png" alt="Ícone do Faker">
                             </a>
                         </li>
 
@@ -80,7 +81,7 @@
                             <a
                             target="_blank" 
                             href="https://www.twitch.tv/alanzoka">
-                                <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/15cec952-c1ba-4ff8-a79c-53c2fa5bd269-profile_image-70x70.png" alt="Ícone do Alanzoka">
+                                <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/f4b12683-57ff-4b57-926a-67512b43a7ff-profile_image-70x70.png" alt="Ícone do Gaules">
                             </a>
                         </li>
                         
@@ -91,7 +92,7 @@
             <section>
                 <div>
                     <h2>Minhas redes</h2>
-                    <p>Se conecte comigo agora mesmo!</p>
+                    <p>Conecte-se comigo agora mesmo!</p>
 
                     <ul class="social-list">
                         <li>
